examples/semantics/errors/error8.grace
fun error8 () : nothing
 var bar:int[10];
{
	if(bar[0] >= bar) then {
		puti(9);
	}	
}
